--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services:
   omada-controller:
     build: .
     network_mode: host
-    #volumes:
-    #  - ./omada-data:/opt/tplink/EAPController/data
-    #  - ./omada-work:/opt/tplink/EAPController/work
-    #  - ./omada-logs:/opt/tplink/EAPController/logs
+    volumes:
+      - /opt/tplink/EAPController/data
+      - /opt/tplink/EAPController/work
+      - /opt/tplink/EAPController/logs
     ports:
       - "8088:8088"
       - "8043:8043"
-    #restart: unless-stopped
+    restart: "always"
     privileged: true
